add a heading for level, a dropdown menu using select and option tags, a submit and cancel buttons

--- a/gameNEW.html
+++ b/gameNEW.html
@@ -43,7 +43,7 @@
       </p>  </div>
     </div>
 
-    <!-- <div class="canvas" id="levelCanvas">
+    <div class="canvas" id="levelCanvas">
 <div class="contentContainer">
 
 
@@ -69,7 +69,7 @@
       <p id=levelErrorMessage>
 
       </p></div>
-    </div> -->
+    </div>
 
     <!--div for help button and text-->
     <div class="help">
