when level entered, change vars (e.g. no. of bullets, enemy speeds) to suit each level

--- a/gameNEW.html
+++ b/gameNEW.html
@@ -107,23 +107,23 @@
     function submitLevel() {
       var level = document.getElementById("level").value;
 
-      // if (level ==1) {
-      //
-      //   totalEnemies = 3;
-      //   minEnemySpeed = 3;
-      //   maxEnemySpeed = 5;
-      //   totalBullets = 20;
-      // } else if (level == 2) {
-      //   totalEnemies = 5;
-      //   minEnemySpeed = 5;
-      //   maxEnemySpeed = 8;
-      //   totalBullets = 15;
-      // } else if (level == 3) {
-      //   totalEnemies = 8;
-      //   minEnemySpeed = 8;
-      //   maxEnemySpeed = 12;
-      //   totalBullets = 10;
-      // }
+      if (level ==1) {
+
+        totalEnemies = 3;
+        minEnemySpeed = 3;
+        maxEnemySpeed = 5;
+        totalBullets = 20;
+      } else if (level == 2) {
+        totalEnemies = 5;
+        minEnemySpeed = 5;
+        maxEnemySpeed = 8;
+        totalBullets = 15;
+      } else if (level == 3) {
+        totalEnemies = 8;
+        minEnemySpeed = 8;
+        maxEnemySpeed = 12;
+        totalBullets = 10;
+      }
 
       // document.getElementById("levelCanvas").style.display="none"
       // document.getElementById("canvas1").style.display="block"
