--- a/gameNEW.html
+++ b/gameNEW.html
@@ -98,8 +98,8 @@
       } else {
 
 
-        // document.getElementById('usernameCanvas').style.display = 'none'
-        // document.getElementById("levelCanvas").style.display = 'grid'
+        document.getElementById('usernameCanvas').style.display = 'none'
+        document.getElementById("levelCanvas").style.display = 'grid'
         document.getElementById("levelHeading").innerHTML = "Hi " + username + " . Please choose a level: Easy, Medium, or Hard?"
       }
     }
@@ -127,8 +127,8 @@
 
 
 
-      // document.getElementById("levelCanvas").style.display="none"
-      // document.getElementById("canvas1").style.display="block"
+      document.getElementById("levelCanvas").style.display="none"
+      document.getElementById("canvas1").style.display="block"
 
     }
 
@@ -137,8 +137,8 @@
       canvas = document.getElementById('gameCanvas');
       canvasContext = canvas.getContext('2d');
 
-      // document.getElementById("canvas1").style.display = "none"
-      // document.getElementById("levelCanvas").style.display = "none"
+      document.getElementById("canvas1").style.display = "none"
+      document.getElementById("levelCanvas").style.display = "none"
 
       setInterval(mainloop, 1000 / 50);
 
