--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!doctype html>
-<meta charset="UTF-8">
-
+<html lang = "en">
 <head>
+<meta charset="UTF-8">
+  <title>SpaceWalk</title>
+  <!--link for css stylesheet-->
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-
   <!--div for the whole layout-->
   <div id="container">
     <!--title-->
@@ -14,42 +15,40 @@
       <h1>Space Walk</h1>
     </div>
 
-    <!--div for play and pause buttons. unicodes are used to get the symbols-->
+    <!--div for play, pause and exit buttons. unicodes are used to get the symbols-->
     <div class="buttons">
       <button id="playButton">&#x23f5;</button>
       <button id="pauseButton">&#x23f8;</button>
       <button id="exitButton">x</button>
-
     </div>
 
     <!--canvas-->
     <div class="canvas" id="canvas1">
       <canvas id="gameCanvas" width="600" height="600"></canvas>
-
     </div>
 
+    <!--div for username-->
     <div class="canvas" id="usernameCanvas">
       <div class="contentContainer">
-
-
+        <!--username heading-->
         <h2 class="heading" id="usernameHeading">
           Enter username
         </h2>
+        <!--username input field-->
         <input id="username"><br>
         <button id="usernameButton" class="button" onclick="submitUsername()">Submit</button>
-        <br />
+        <br>
       </div>
     </div>
 
+    <!--div for level-->
     <div class="canvas" id="levelCanvas">
       <div class="contentContainer">
-
-
-
-
+        <!--level heading-->
         <h2 class="heading" id="levelHeading">
           Enter level
         </h2>
+        <!--level dropdown-->
         <select id="level">
           <option value="1">
             Easy
@@ -63,189 +62,30 @@
         </select>
         <button id="levelButton" class="button" onclick="submitLevel()">Submit</button>
         <br>
-        <p id=levelErrorMessage>
-
-        </p>
       </div>
     </div>
 
 
-    <!--div for help button and text-->
+    <!--help button-->
     <div class="help">
-      <button id="help" onlick="help()">Help</button>
+      <button id="help" onclick="help()">Help</button>
       <p id="helpText"></p>
     </div>
+    <!--delete button-->
     <div class="delete">
       <button id="deleteButton" onclick="deleteData()">New player</button>
     </div>
   </div>
 
 
-
+  <!--calling js files relating to different elements of the game-->
+  <script src="menu.js"></script>
   <script src="variables.js"></script>
   <script src="player.js"></script>
   <script src="enemy.js"></script>
   <script src="bullet.js"></script>
-  <script src="menu.js"></script>
   <script src="coins.js"></script>
+  <script src="main.js"></script>
 
-  <script>
-    function submitUsername() {
-      var username = document.getElementById("username").value
-      localStorage.setItem('username', username)
-      if (username == null || username == "") {
-        alert("Please enter a username")
-      } else {
-
-
-        document.getElementById('usernameCanvas').style.display = 'none'
-        document.getElementById("levelCanvas").style.display = 'grid'
-        document.getElementById("levelHeading").innerHTML = "Hello " + username + "! " + "<br />" + "Choose a level."
-      }
-    }
-function deleteData(){
-var confirmDelete = confirm("This will delete all your previous data including username and high score. Do you want to continue?")
-if(confirmDelete){localStorage.removeItem("highscore")
-localStorage.removeItem("username")}
-
-
-}
-    function submitLevel() {
-      document.getElementById("levelButton").focus();
-      var level = document.getElementById("level").value;
-      playerYpos = playerYpos = canvas.height - PLAYER_HEIGHT
-      enemies.forEach(function(enemy, i, array) { //enemies are deleted
-        enemy.enemyXpos = canvas.width + 10;
-      })
-      coins.forEach(function(coin, i, array) { //coins are deleted
-        coin.coinXpos = canvas.width + 10;
-      })
-
-
-      if (level == 1) {
-
-        totalEnemies = 3;
-        minEnemySpeed = 3;
-        maxEnemySpeed = 5;
-        totalBullets = 20;
-      } else if (level == 2) {
-        totalEnemies = 5;
-        minEnemySpeed = 5;
-        maxEnemySpeed = 8;
-        totalBullets = 15;
-      } else if (level == 3) {
-        totalEnemies = 8;
-        minEnemySpeed = 8;
-        maxEnemySpeed = 12;
-        totalBullets = 10;
-      }
-
-if(replay == false){
-
-
-      alert('You have 3 lives and the aim is to survive for as long as possible. \nUse up arrow to jump and space bar to shoot.')
-      alert('Hitting a comet would lower your lives by 1. \nYou have ' + totalBullets + ' bullets availabl, and you will get 5 extra bullets every time you collect a coin.')
-      alert('Press Ok, and then click play button to start.')
-}
-      displayExit = false;
-
-
-
-      document.getElementById("levelCanvas").style.display = "none"
-      document.getElementById("canvas1").style.display = "block"
-
-score = 0;
-lives = 3;
-
-    }
-
-    //when page is loading set canvas properties and run mainloop 50 times per second
-    window.onload = function() {
-      canvas = document.getElementById('gameCanvas');
-      canvasContext = canvas.getContext('2d');
-      document.getElementById("username").focus();
-
-      displayExit = true;
-
-
-      document.getElementById("canvas1").style.display = "none"
-      document.getElementById("levelCanvas").style.display = "none"
-
-      setInterval(mainloop, 1000 / 50);
-
-      showExit();
-
-    } //end of function
-
-    function showExit() {
-      if (displayExit == true) {
-        document.getElementById("playButton").style.display = "none";
-        document.getElementById("pauseButton").style.display = "none";
-      } else {
-        document.getElementById("playButton").style.display = "inline-block";
-        document.getElementById("pauseButton").style.display = "inline-block"
-      }
-    }
-
-    //mainloop that continuously runs every 50 seconds
-    function mainloop() {
-      showExit();
-      //background image
-      drawImg(background, BACKGROUND_SOURCE_X_POS, BACKGROUND_SOURCE_Y_POS, BACKGROUND_SOURCE_WIDTH, BACKGROUND_SOURCE_HEIGHT, BACKGROUND_X_POS, BACKGROUND_Y_POS, BACKGROUND_WIDTH, BACKGROUND_HEIGHT);
-      //pause music when pause button is pressed
-      music.pause();
-
-      if (lives > 0) {
-        gameStatus();
-        //drawing staus bar
-        progress();
-        //drawing enemy objects
-        drawEnemies();
-        drawCoins();
-
-        //for loop that makes enemies - by running makeEnemies() function - only if the number of enemies on the screen is less than the totalEnemies variable. If the number of enemies on screen is bigger than the defined limit, the code will not make any further enemies. So the number of total enemies can be controlled by adjusting the totalEnemies variable.
-        if (makingEnemies == true) {
-          for (i = 0; i < totalEnemies; i++) {
-            makeEnemies();
-          }
-          makingEnemies = false;
-        }
-
-        if (makingCoins == true) {
-          for (i = 0; i < totalCoins; i++) {
-            makeCoins();
-          }
-          makingCoins = false;
-        }
-
-        //if play button is pressed
-        if (playGame == true) {
-          //play background music
-          music.play();
-
-          //event listeners for pressing and releasing keys. This is not added with other event listeners because these control keys should not be available when pause is pressed
-          document.addEventListener('keydown', keyPressed);
-          document.addEventListener('keyup', keyReleased);
-          //run following functions in mainloop : movement of player & enemy, animation of player sprites, and calculating remaining bullets
-          playerMove();
-          enemyMove();
-          coinMove();
-          playerAnimation();
-          calculateBulletsRemaining();
-
-          bulletsLeft()
-        }
-
-
-
-      } else {
-        //play game over sound effect
-        gameOver.play();
-        //calculate high score
-        calculateHighScore();
-        endScreen();
-      } //end of function mainloop()
-
-    }
-  </script>
 </body>
+</html>
