--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <script src="enemy.js"></script>
     <script src="bullet.js"></script>
     <script src="coins.js"></script>
-    <script src="main.js"></script>
+    <script src="mainloop.js"></script>
 
 </body>
 
